--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 兩個 ' ' 中間放網址
 改到一個都沒有的時候把這個index.html擋按砍掉
 */
-var urls = ['https://forms.gle/8UYtr1AWLT3tov9b8',
-'https://forms.gle/1WVdGAtqQDyCLCAd6',
-'https://forms.gle/cC4Y8eagbLRctK3f9',
-'https://forms.gle/YxDUbWTaE7wY2a3t9'
+var urls = ['https://forms.gle/1ne5iyEukYhAHmpv7',
+'https://forms.gle/ffsqN72mVxcXo8BH7',
+'https://forms.gle/UKon8Kj6VRsoBhn46',
+'https://forms.gle/cCaadmJrEzsSGL8MA'
 ];
 //下面的不要碰
 var min = 0;
