--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 兩個 ' ' 中間放網址
 改到一個都沒有的時候把這個index.html擋按砍掉
 */
-var urls = ['https://forms.gle/1ne5iyEukYhAHmpv7',
-'https://forms.gle/ffsqN72mVxcXo8BH7',
-'https://forms.gle/UKon8Kj6VRsoBhn46',
-'https://forms.gle/cCaadmJrEzsSGL8MA'
+var urls = ['https://forms.gle/sMoTcWUQeoKE4uhd6',
+'https://forms.gle/SAtLq6VNBhPy4ys18',
+'https://forms.gle/uiTy9uuNv9E4KMnq8',
+'https://forms.gle/1bwi3Y4ApeguK8a96'
 ];
 //下面的不要碰
 var min = 0;
