--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 兩個 ' ' 中間放網址
 改到一個都沒有的時候把這個index.html擋按砍掉
 */
-var urls = ['https://forms.gle/sMoTcWUQeoKE4uhd6',
+var urls = [ //'https://forms.gle/sMoTcWUQeoKE4uhd6',
 'https://forms.gle/SAtLq6VNBhPy4ys18',
 'https://forms.gle/uiTy9uuNv9E4KMnq8',
 'https://forms.gle/1bwi3Y4ApeguK8a96'
